js/js.translator/testData/incremental/invalidation/abstractClassWithJsExport/lib1/lib.1.kt
@JsExport
abstract class Foo {
    abstract fun foo(): String
    fun bar(): String = "K"
}